--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "ui": "pnpm dlx shadcn add",
+    "typecheck": "tsc --noEmit",
+    "f": "prettier --write \"**/*.{ts,tsx,mdx}\"",
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint": "^9.15.0",
+    "next": "15.0.3",
+    "prettier": "^3.3.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
