--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
-  "name": "beautiful-collection",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "ui": "pnpm dlx shadcn add",
-    "typecheck": "tsc --noEmit",
-    "f": "prettier --write \"**/*.{ts,tsx,mdx}\"",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "eslint": "^9.15.0",
-    "next": "15.0.3",
-    "prettier": "^3.3.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "beautiful-collection",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"ui": "pnpm dlx shadcn add",
+		"typecheck": "tsc --noEmit",
+		"f": "prettier --write \"**/*.{ts,tsx,mdx}\"",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-scroll-area": "^1.2.1",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.4",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"eslint": "^9.15.0",
+		"framer-motion": "^11.11.17",
+		"lucide-react": "^0.460.0",
+		"next": "15.0.3",
+		"prettier": "^3.3.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-resizable": "^3.0.5",
+		"react-syntax-highlighter": "^15.6.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"zustand": "^5.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18.2.0",
+		"@types/react-dom": "^18.2.0",
+		"@types/react-syntax-highlighter": "^15.5.7",
+		"eslint-config-next": "15.0.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
